istio/istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: oteldemo-gateway
  namespace: otel-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "oteldemo.35.234.69.29.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oteldemo-httproute
  namespace: otel-demo
spec:
  hosts:
  - "oteldemo.35.234.69.29.nip.io"
  gateways:
  - oteldemo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 8080
          host: opentelemetry-demo-frontend
